--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://your-username.github.io/Portfolio",
+  "homepage": "https://noahccb.github.io/Portfolio/",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
